# ChangeLog for media-gfx/inkscape
# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/media-gfx/cvs-repo/gentoo-x86/media-gfx/inkscape/ChangeLog,v 1.109 2008/11/24 21:11:03 ranger Exp $

  24 Nov 2008; Brent Baude <ranger@gentoo.org> inkscape-0.46-r5.ebuild:
  Marking inkscape-0.46-r5 ppc64 for bug 239414

  07 Oct 2008; nixnut <nixnut@gentoo.org> inkscape-0.46-r5.ebuild:
  Stable on ppc wrt bug 239414

  05 Oct 2008; Jeroen Roovers <jer@gentoo.org> inkscape-0.46-r5.ebuild:
  Stable for HPPA (bug #239414).

  04 Oct 2008; Markus Meier <maekke@gentoo.org> inkscape-0.46-r5.ebuild:
  x86 stable, bug #239414

  04 Oct 2008; Thomas Anderson <gentoofan23@gentoo.org>
  inkscape-0.46-r5.ebuild:
  stable amd64, bug 239414

  03 Oct 2008; Ferris McCormick <fmccor@gentoo.org> inkscape-0.46-r5.ebuild:
  Sparc stable, part of Bug #239414.

  27 Aug 2008; Markus Meier <maekke@gentoo.org> inkscape-0.46-r5.ebuild:
  remove libgnomeprint[ui] from gnome deps as they aren't used anymore, bug
  #235772

*inkscape-0.46-r5 (16 Aug 2008)
*inkscape-0.46-r4 (16 Aug 2008)

  16 Aug 2008; Markus Meier <maekke@gentoo.org>
  +files/inkscape-0.46-bug-174720-0.patch,
  +files/inkscape-0.46-bug-174720-1.patch,
  +files/inkscape-0.46-bug-214171.patch, metadata.xml,
  -inkscape-0.46-r3.ebuild, +inkscape-0.46-r4.ebuild,
  +inkscape-0.46-r5.ebuild:
  add patches for improved gnuplot svg handling, bug #234753; describe local
  USE-flags in metadata.xml

*inkscape-0.46-r3 (04 Jun 2008)

  04 Jun 2008; Peter Alfredsen <loki_val@gentoo.org>
  +files/inkscape-0.46-poppler-0.8.3.patch, inkscape-0.46-r2.ebuild,
  +inkscape-0.46-r3.ebuild:
  Bump to -r3 and patch for bug 224883

  28 May 2008; Markus Meier <maekke@gentoo.org> -inkscape-0.45.1-r1.ebuild:
  old

  26 May 2008; Raúl Porcel <armin76@gentoo.org> inkscape-0.46-r2.ebuild:
  sparc stable wrt #223443

  25 May 2008; Markus Meier <maekke@gentoo.org> inkscape-0.46-r2.ebuild: