@@ -1,11 +1,19 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 AUX inkscape-0.46-bug-174720-0.patch 908 RMD160 ea73954482813cac9644d7dbe99c2f27d1ed9722 SHA1 354f42f93974519391492cda599887dbf89f24ea SHA256 0c42debc80f1cbc254a49f3a737bbadaa8a975d81a850b2448bd1267500ee66e
 AUX inkscape-0.46-bug-174720-1.patch 862 RMD160 c356fe9abfcc79575dcfe58b13240a7ad3939a00 SHA1 b6d3e2f821f0dc877ccb1ff3c5f751406daff767 SHA256 e038344cdb69176eaba5ff5f67e5eea5690608bd69e5b5e4e47b491d55a82394
 AUX inkscape-0.46-bug-214171.patch 952 RMD160 a946a3c2c191fe981c7756ffb9344c8da11f5291 SHA1 c7e492fcbebc8a417e61eb56f8bc70fe2e78eab5 SHA256 e4d74045d8e30289d6d7095461dbe3df083fd4fbc664f1944763bb6e71170226
 AUX inkscape-0.46-gcc43.patch 287 RMD160 68f9810c6dd7da96d7b1f73c76dab97ae3da7f25 SHA1 499d102c60122e6680b49a941f72b422b3d6d395 SHA256 dba42470e243e02e396b3bb148115ce80bf1f5a74df26a4911ebd9dcfa8dc221
 AUX inkscape-0.46-poppler-0.8.3.patch 1571 RMD160 7f1ac72f9a9790f0b8df3b3c00da48896a884fba SHA1 16ee2bb1e56d260c3e0b30f8bcaee8a2b0963412 SHA256 ed4109b09c05da48c040923056eaf406b44ca0cf515e7b3396495182280fe24c
 DIST inkscape-0.46.tar.gz 18615326 RMD160 449e07fa4caa71f20025774353d19cad674631ac SHA1 b7c53c6d2bc0de4ff24d4a6bee86359ff11bef27 SHA256 91861e0d72228116d31e07192f77fe9e0968d4ed06499829b2d66e641496993a
-EBUILD inkscape-0.46-r2.ebuild 2663 RMD160 98a8e8beb79c00229206c91b577974bef8bc03f4 SHA1 4f4c85fbf5c2783f7cb3a2375966ccd39763a20c SHA256 4fec98bc259390da87633972e0a9e61a5a820f82fb9d9b54f2a81a057f5dc4e2
-EBUILD inkscape-0.46-r4.ebuild 2803 RMD160 93c687acf0997b638d2cf42bbb01cf9b4cf0fe60 SHA1 5a40bab829009a221e809b2a3ac5490a7e1904b1 SHA256 4a14e8c41a645d0273e93c0d4795863a64e5bbc558a8a5ea61b4347a074a4e7e
 EBUILD inkscape-0.46-r5.ebuild 2736 RMD160 c9b1f154932f33884231ec838b08a779c273c88f SHA1 e89f0d205ad9c6e1044ad351ffdb829a4cfc0491 SHA256 3416472cdec439db131d61b2323ad3efbea80bb94ec7bf239c353de987f22490
-MISC ChangeLog 14416 RMD160 1a91e018dc78fdbc1d21d53a0dc0bf371cc51a30 SHA1 bf1accab7a1a31cf2c5f8a992f297a79545d15de SHA256 33055faf15a220f153e4f6afbd8a6dfa1981f7b443872552fc84b69102666f70
+MISC ChangeLog 14525 RMD160 1b2ddd2648542bafcd07c2b6b458eb4c776240fe SHA1 2684065ee72652e2facb38e3fa842919ee28b4aa SHA256 5a2b51c35422a18124fc78f9a051993b1f5eb9d2b45d55565fbfc821fbd36224
 MISC metadata.xml 458 RMD160 90cb8f8058926fe666fc2dbec1af647248210f6c SHA1 9af2ef1f67bb9be6e9eecb2dc2f70badeb6277b1 SHA256 52763c744f2f6615fd6f900c3843356432ead07777ebdb548836b1e4fbed20ca
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.9 (GNU/Linux)
+
+iEYEARECAAYFAklg5a8ACgkQkKaRLQcq0GJ9BgCcCf93kJrJGGrL+IjeP565uTTs
+8MQAmwfO97W0ffN4bEx+pd9I4Ng8Y45A
+=Oxe8
+-----END PGP SIGNATURE-----
