@@ -1,6 +1,10 @@
 # ChangeLog for media-gfx/inkscape
-# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-gfx/cvs-repo/gentoo-x86/media-gfx/inkscape/ChangeLog,v 1.109 2008/11/24 21:11:03 ranger Exp $
+# Copyright 2002-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /usr/local/ssd/gentoo-x86/output/media-gfx/cvs-repo/gentoo-x86/media-gfx/inkscape/ChangeLog,v 1.110 2009/01/04 16:36:57 maekke Exp $
+
+  04 Jan 2009; Markus Meier <maekke@gentoo.org> -inkscape-0.46-r2.ebuild,
+  -inkscape-0.46-r4.ebuild:
+  old
 
   24 Nov 2008; Brent Baude <ranger@gentoo.org> inkscape-0.46-r5.ebuild:
   Marking inkscape-0.46-r5 ppc64 for bug 239414
